Both Kmer and Seq (for Fastq) filter tools seems to be working.  I had to hack the seq output so that we use C output methods, rather than those that come with SeqAn.  The sequence filtering tool is tediously slow at the moment.  I should revisit this at some point to do some profiling and to see where it can be speeded up.  No doubt I am doing waaay too much string copying at the moment.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -20,6 +20,7 @@ kat_SOURCES = \
                 inc/str_utils.hpp \
                 inc/file_utils.hpp \
 		inc/seq_utils.hpp \
+		inc/seq_utils.cc \
                 inc/common_args.hpp \
                 sect/sect_main.cc \
 		sect/sect.hpp \
@@ -44,7 +45,7 @@ kat_SOURCES = \
 		filter/kmer/kmer_filter.hpp \
 		filter/kmer/kmer_filter_args.hpp \
 		filter/kmer/kmer_filter_main.hpp \
-        filter/seq/seq_filter_main.cc \
+        	filter/seq/seq_filter_main.cc \
 		filter/seq/seq_filter.hpp \
 		filter/seq/seq_filter_args.hpp \
 		filter/seq/seq_filter_main.hpp \
