Added additional newline at end of FASTQ output for seq filter.

--- a/kat.cbp
+++ b/kat.cbp
@@ -19,6 +19,71 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
+		<Unit filename="src/Makefile.am" />
+		<Unit filename="src/comp/comp.hpp" />
+		<Unit filename="src/comp/comp_args.hpp" />
+		<Unit filename="src/comp/comp_main.cc" />
+		<Unit filename="src/comp/comp_main.hpp" />
+		<Unit filename="src/filter/filter_args.hpp" />
+		<Unit filename="src/filter/filter_main.cc" />
+		<Unit filename="src/filter/filter_main.hpp" />
+		<Unit filename="src/filter/kmer/kmer_filter.hpp" />
+		<Unit filename="src/filter/kmer/kmer_filter_args.hpp" />
+		<Unit filename="src/filter/kmer/kmer_filter_main.cc" />
+		<Unit filename="src/filter/kmer/kmer_filter_main.hpp" />
+		<Unit filename="src/filter/seq/seq_filter.hpp" />
+		<Unit filename="src/filter/seq/seq_filter_args.hpp" />
+		<Unit filename="src/filter/seq/seq_filter_main.cc" />
+		<Unit filename="src/filter/seq/seq_filter_main.hpp" />
+		<Unit filename="src/gcp/gcp.hpp" />
+		<Unit filename="src/gcp/gcp_args.hpp" />
+		<Unit filename="src/gcp/gcp_main.cc" />
+		<Unit filename="src/gcp/gcp_main.hpp" />
+		<Unit filename="src/hist/hist_args.hpp" />
+		<Unit filename="src/hist/hist_main.cc" />
+		<Unit filename="src/hist/hist_main.hpp" />
+		<Unit filename="src/hist/histogram.hpp" />
+		<Unit filename="src/inc/common_args.hpp" />
+		<Unit filename="src/inc/file_utils.hpp" />
+		<Unit filename="src/inc/gnuplot/gnuplot_i.cc" />
+		<Unit filename="src/inc/gnuplot/gnuplot_i.hpp" />
+		<Unit filename="src/inc/jellyfish/fstream_default.hpp" />
+		<Unit filename="src/inc/jellyfish/jellyfish_helper.hpp" />
+		<Unit filename="src/inc/matrix/matrix_metadata_extractor.cc" />
+		<Unit filename="src/inc/matrix/matrix_metadata_extractor.hpp" />
+		<Unit filename="src/inc/matrix/sparse_matrix.hpp" />
+		<Unit filename="src/inc/matrix/threaded_sparse_matrix.hpp" />
+		<Unit filename="src/inc/seq_utils.cc" />
+		<Unit filename="src/inc/seq_utils.hpp" />
+		<Unit filename="src/inc/str_utils.hpp" />
+		<Unit filename="src/kat.cc" />
+		<Unit filename="src/kat_args.hpp" />
+		<Unit filename="src/plot/common_plot_args.hpp" />
+		<Unit filename="src/plot/contamination/contamination_plot_args.hpp" />
+		<Unit filename="src/plot/contamination/contamination_plot_main.cc" />
+		<Unit filename="src/plot/contamination/contamination_plot_main.hpp" />
+		<Unit filename="src/plot/density/density_plot_args.hpp" />
+		<Unit filename="src/plot/density/density_plot_main.cc" />
+		<Unit filename="src/plot/density/density_plot_main.hpp" />
+		<Unit filename="src/plot/plot_args.hpp" />
+		<Unit filename="src/plot/plot_main.cc" />
+		<Unit filename="src/plot/plot_main.hpp" />
+		<Unit filename="src/plot/profile/profile_plot_args.hpp" />
+		<Unit filename="src/plot/profile/profile_plot_main.cc" />
+		<Unit filename="src/plot/profile/profile_plot_main.hpp" />
+		<Unit filename="src/plot/spectra-cn/spectra_cn_plot_args.hpp" />
+		<Unit filename="src/plot/spectra-cn/spectra_cn_plot_main.cc" />
+		<Unit filename="src/plot/spectra-cn/spectra_cn_plot_main.hpp" />
+		<Unit filename="src/plot/spectra-hist/spectra_hist_plot_args.hpp" />
+		<Unit filename="src/plot/spectra-hist/spectra_hist_plot_main.cc" />
+		<Unit filename="src/plot/spectra-hist/spectra_hist_plot_main.hpp" />
+		<Unit filename="src/plot/spectra-mx/spectra_mx_plot_args.hpp" />
+		<Unit filename="src/plot/spectra-mx/spectra_mx_plot_main.cc" />
+		<Unit filename="src/plot/spectra-mx/spectra_mx_plot_main.hpp" />
+		<Unit filename="src/sect/sect.hpp" />
+		<Unit filename="src/sect/sect_args.hpp" />
+		<Unit filename="src/sect/sect_main.cc" />
+		<Unit filename="src/sect/sect_main.hpp" />
 		<Extensions>
 			<code_completion />
 			<debugger />
